# robot_iot_project

./: README.md  explorer.cpp
callery_map_analysis/: CMakeLists.txt  package.xml  setup.py
callery_map_analysis/launch/: callery_map_analysis.launch  ifttt_robot.launch
callery_map_analysis/src/: callery_map_analysis.py
launch files/: tiago_explorer.launch  tiago_map_merger.launch
world files/: lshape.world  lshapefurn.world  tut_office.world
