<?xml version="1.0"?>
<package>
  <name>callery_map_analysis</name>
  <version>0.0.0</version>
  <description>
    This package takes a 2D occupancy grid map as input and creates a hybrid
    topological map in order to determine building/room areas and perimeters
    and communicates this information via the IFTTT smart device communication
    protocol.
  </description>

  <maintainer email="mc16766@my.bristol.ac.uk">Matthew Callery</maintainer>
  <license>BSD</license>
  <author email="mc16766@my.bristol.ac.uk">Matthew Callery</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
